compiler/tests/errortests/global_mut_slice.txt
FILENAME:3:9: error: Global string slices must be declared as constant.
let mut GLOBAL: [u8] = "Hello, World!";
        ^-----
